--- a/plugin_info.toml
+++ b/plugin_info.toml
@@ -1,19 +1,19 @@
 ## To modify by developer(s) of the plugin
 
 [plugin-info]
-SHORT_PLUGIN_NAME = 'template'  #to be modified, for instance daqmx then rename the module name:
+SHORT_PLUGIN_NAME = 'redpitaya'  #to be modified, for instance daqmx then rename the module name:
 # (pymodaq_plugins_template become pymodaq_plugins_daqmx for instance)
 
-package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_template' #to modify
-description = 'some word about your plugin'
+package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_redpitaya' #to modify
+description = 'PyMoDAQ Plugin to use the Redpitaya electronic board'
 
-author = 'Author Name'
-author-email = 'Author email'
+author = 'Sebastien J. Weber'
+author-email = 'sebastien.weber@cemes.fr'
 license = 'MIT'
 
 [plugin-install]
 #packages required for your plugin:
-packages-required = ['pymodaq>=4.1.0']
+packages-required = ['pymodaq>=4.1.0', 'pymeasure']
 
 [features]  # defines the plugin features contained into this plugin
 instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
