--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,6 +23,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine toml pymodaq pyqt5
+
+    - name: create local pymodaq folder and setting permissions
+      run: |
+        sudo mkdir /etc/.pymodaq
+        sudo chmod uo+rw /etc/.pymodaq
+        
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
