--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine toml pymodaq pyqt5
+        pip install setuptools wheel twine toml "pymodaq>=4.1.0" pyqt5
 
     - name: create local pymodaq folder and setting permissions
       run: |
