--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,9 +4,8 @@
 name: Upload Python Package
 
 on:
-  # release:
-  #   types: [created]
-  workflow_dispatch
+   release:
+     types: [created]
 
 jobs:
   deploy:
@@ -18,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
